--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
    "name": "airbnb-project",
    "version": "1.0.0",
    "description": "",
-   "main": "app.js",
+   "main": "index.js",
    "scripts": {
-      "start": "node app.js"
+      "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
    "author": "",
