--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "engines": {
       "node": "22.18.0"
    },
-   "name": "airbnb-project",
+   "name": "major-project",
    "version": "1.0.0",
    "description": "",
    "main": "app.js",
