--- a/package.json
+++ b/package.json
@@ -1,36 +1,274 @@
 {
-   "engines": {
-      "node": "22.18.0"
-   },
-   "name": "major-project",
-   "version": "1.0.0",
-   "description": "",
-   "main": "app.js",
-   "scripts": {
-      "start": "node app.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "@mapbox/mapbox-sdk": "^0.16.2",
-      "cloudinary": "^1.30.0",
-      "connect-flash": "^0.1.1",
-      "connect-mongo": "^5.1.0",
-      "cookie-parser": "^1.4.7",
-      "dotenv": "^17.2.2",
-      "ejs": "^3.1.10",
-      "ejs-mate": "^4.0.0",
-      "express": "^5.1.0",
-      "express-session": "^1.18.2",
-      "joi": "^18.0.1",
-      "method-override": "^3.0.0",
-      "mongoose": "^8.18.2",
-      "multer": "^2.0.2",
-      "multer-storage-cloudinary": "^4.0.0",
-      "passport": "^0.7.0",
-      "passport-local": "^1.0.0",
-      "passport-local-mongoose": "^8.0.0"
-   }
+  "engines": {
+    "node": "22.18.0"
+  },
+  "name": "major-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "dependencies": {
+    "accepts": "^2.0.0",
+    "acorn": "^8.15.0",
+    "acorn-walk": "^8.3.4",
+    "agent-base": "^6.0.2",
+    "append-field": "^1.0.0",
+    "arrify": "^1.0.1",
+    "asn1.js": "^5.4.1",
+    "ast-types": "^0.13.4",
+    "async": "^3.2.6",
+    "asynckit": "^0.4.0",
+    "balanced-match": "^1.0.2",
+    "base-64": "^0.1.0",
+    "bn.js": "^4.12.2",
+    "body-parser": "^2.2.0",
+    "brace-expansion": "^2.0.2",
+    "bson": "^6.10.4",
+    "buffer-from": "^1.1.2",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "cacheable-lookup": "^5.0.4",
+    "cacheable-request": "^7.0.4",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "camelcase": "^5.3.1",
+    "camelcase-keys": "^6.2.2",
+    "clone-response": "^1.0.3",
+    "cloudinary": "^1.30.0",
+    "cloudinary-core": "^2.14.0",
+    "combined-stream": "^1.0.8",
+    "concat-stream": "^2.0.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "content-disposition": "^1.0.0",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.2",
+    "cookie-parser": "^1.4.7",
+    "cookie-signature": "^1.2.2",
+    "core-js": "^3.6.5",
+    "core-util-is": "^1.0.3",
+    "data-uri-to-buffer": "^3.0.1",
+    "debug": "^4.4.1",
+    "decamelize": "^1.2.0",
+    "decamelize-keys": "^1.1.1",
+    "decompress-response": "^6.0.0",
+    "deep-is": "^0.1.4",
+    "defer-to-connect": "^2.0.1",
+    "degenerator": "^3.0.4",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "dotenv": "^17.2.2",
+    "dunder-proto": "^1.0.1",
+    "ee-first": "^1.1.1",
+    "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
+    "encodeurl": "^2.0.0",
+    "end-of-stream": "^1.4.5",
+    "error-ex": "^1.3.4",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "escape-html": "^1.0.3",
+    "escodegen": "^1.14.3",
+    "esprima": "^4.0.1",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "eventemitter3": "^3.1.2",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "fast-levenshtein": "^2.0.6",
+    "file-uri-to-path": "^2.0.0",
+    "filelist": "^1.0.4",
+    "finalhandler": "^2.1.0",
+    "find-up": "^4.1.0",
+    "form-data": "^3.0.4",
+    "forwarded": "^0.2.0",
+    "fresh": "^2.0.0",
+    "fs-extra": "^8.1.0",
+    "ftp": "^0.3.10",
+    "function-bind": "^1.1.2",
+    "generaterr": "^1.5.0",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "get-stream": "^5.2.0",
+    "get-uri": "^3.0.2",
+    "gopd": "^1.2.0",
+    "got": "^11.8.6",
+    "graceful-fs": "^4.2.11",
+    "hard-rejection": "^2.1.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "hosted-git-info": "^4.1.0",
+    "http-cache-semantics": "^4.2.0",
+    "http-errors": "^2.0.0",
+    "http-proxy-agent": "^4.0.1",
+    "http2-wrapper": "^1.0.3",
+    "https-proxy-agent": "^5.0.1",
+    "iconv-lite": "^0.6.3",
+    "indent-string": "^4.0.0",
+    "inherits": "^2.0.4",
+    "ip": "^1.1.9",
+    "ip-address": "^10.0.1",
+    "ipaddr.js": "^1.9.1",
+    "is-arrayish": "^0.2.1",
+    "is-core-module": "^2.16.1",
+    "is-plain-obj": "^1.1.0",
+    "is-promise": "^4.0.0",
+    "isarray": "^0.0.1",
+    "jake": "^10.9.4",
+    "joi": "^18.0.1",
+    "js-tokens": "^4.0.0",
+    "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "jsonfile": "^4.0.0",
+    "kareem": "^2.6.3",
+    "keyv": "^4.5.4",
+    "kind-of": "^6.0.3",
+    "kruptein": "^3.0.8",
+    "levn": "^0.3.0",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lowercase-keys": "^2.0.0",
+    "lru-cache": "^5.1.1",
+    "map-obj": "^4.3.0",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^1.1.0",
+    "memory-pager": "^1.5.0",
+    "meow": "^9.0.0",
+    "merge-descriptors": "^2.0.0",
+    "method-override": "^3.0.0",
+    "methods": "^1.1.2",
+    "mime-db": "^1.54.0",
+    "mime-types": "^3.0.1",
+    "mimic-response": "^1.0.1",
+    "min-indent": "^1.0.1",
+    "minimalistic-assert": "^1.0.1",
+    "minimatch": "^5.1.6",
+    "minimist": "^1.2.8",
+    "minimist-options": "^4.1.0",
+    "mkdirp": "^0.5.6",
+    "mongodb": "^6.18.0",
+    "mongodb-connection-string-url": "^3.0.2",
+    "mongoose": "^8.18.2",
+    "mpath": "^0.9.0",
+    "mquery": "^5.0.0",
+    "ms": "^2.1.3",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "negotiator": "^1.0.0",
+    "netmask": "^2.0.2",
+    "normalize-package-data": "^3.0.3",
+    "normalize-url": "^6.1.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.1.0",
+    "once": "^1.4.0",
+    "optionator": "^0.8.3",
+    "p-cancelable": "^2.1.1",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "pac-proxy-agent": "^5.0.0",
+    "pac-resolver": "^5.0.1",
+    "parse-json": "^5.2.0",
+    "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "passport-strategy": "^1.0.0",
+    "path-exists": "^4.0.0",
+    "path-parse": "^1.0.7",
+    "path-to-regexp": "^8.3.0",
+    "pause": "^0.0.1",
+    "picocolors": "^1.1.1",
+    "prelude-ls": "^1.1.2",
+    "proxy-addr": "^2.0.7",
+    "proxy-agent": "^5.0.0",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.3",
+    "punycode": "^2.3.1",
+    "q": "^1.5.1",
+    "qs": "^6.14.0",
+    "quick-lru": "^5.1.1",
+    "random-bytes": "^1.0.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^3.0.1",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
+    "readable-stream": "^3.6.2",
+    "redent": "^3.0.0",
+    "resolve": "^1.22.10",
+    "resolve-alpn": "^1.2.1",
+    "responselike": "^2.0.1",
+    "router": "^2.2.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "scmp": "^2.1.0",
+    "semver": "^7.7.2",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "sift": "^17.1.3",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.8.7",
+    "socks-proxy-agent": "^5.0.1",
+    "source-map": "^0.6.1",
+    "sparse-bitfield": "^3.0.3",
+    "spdx-correct": "^3.2.0",
+    "spdx-exceptions": "^2.5.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.22",
+    "statuses": "^2.0.2",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
+    "strip-indent": "^3.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "toidentifier": "^1.0.1",
+    "tr46": "^5.1.1",
+    "trim-newlines": "^3.0.1",
+    "tslib": "^2.8.1",
+    "type-check": "^0.3.2",
+    "type-fest": "^0.18.1",
+    "type-is": "^2.0.1",
+    "typedarray": "^0.0.6",
+    "uid-safe": "^2.1.5",
+    "undici-types": "^7.12.0",
+    "universalify": "^0.1.2",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "validate-npm-package-license": "^3.0.4",
+    "vary": "^1.1.2",
+    "vm2": "^3.9.19",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^14.2.0",
+    "word-wrap": "^1.2.5",
+    "wrappy": "^1.0.2",
+    "xregexp": "^2.0.0",
+    "xtend": "^4.0.2",
+    "yallist": "^3.1.1",
+    "yargs-parser": "^20.2.9"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Prateek-K-B/Airbnb-Major-Project-.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Prateek-K-B/Airbnb-Major-Project-/issues"
+  },
+  "homepage": "https://github.com/Prateek-K-B/Airbnb-Major-Project-#readme"
 }
