--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.2",
     "accepts": "^2.0.0",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
@@ -38,7 +39,6 @@
     "combined-stream": "^1.0.8",
     "concat-stream": "^2.0.0",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.1.0",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
